Replaced popovers with divs to try to fix images on mobile + more

--- a/photo-frame/public/styles/reset.css
+++ b/photo-frame/public/styles/reset.css
@@ -1,16 +1,18 @@
 html, body {
+    height: 100vh;
+    height: 100svh;
     margin: 0;
     padding: 0;
 }
 
-body {
-    height: 100vh;
+* {
+    box-sizing: border-box;
 }
 
 button {
+    cursor: pointer;
     border: none;
     background-color: transparent;
     padding: 0;
     margin: 0;
-    cursor: pointer;
 }
